--- a/src/index.css
+++ b/src/index.css
@@ -369,12 +369,32 @@ form.sign-in-form {
 }
 
 /* styles for the sidebar transition */
+@keyframes slide-out {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
 .open-sidebar {
-  width: 14vw;
-  transition: width 0.75s ease-out;
+  animation: slide-in 0.75s forwards;
 }
 
 .close-sidebar {
-  width: 0;
-  transition: width 0.3s ease-in;
+  animation: slide-out 0.3s forwards;
+}
+
+.hidden {
+  display: none;
 }
