--- a/src/index.css
+++ b/src/index.css
@@ -398,3 +398,8 @@ form.sign-in-form {
 .hidden {
   display: none;
 }
+
+.ol-custom-overviewmap {
+  margin-bottom: 2rem;
+  margin-left: 69rem;
+}
