--- a/src/index.css
+++ b/src/index.css
@@ -645,3 +645,11 @@ input[type="radio"].visually-hidden {
 input[type="radio"].visually-hidden:checked + .radio-style:before {
   box-shadow: inset 0 0 0 0.25em #2eca6f; /* Adjusted checked box shadow color and size */
 }
+
+/* FULL SCREEN ICON  */
+.custom-fullscreen {
+  bottom: unset !important;
+  top: 40px !important;
+  right: 8px !important;
+  left: unset !important;
+}
