--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ input {
   font-family: "Poppins", sans-serif;
 }
 
+/* LOGIN / SIGNUP FORM STYLING  */
 .signin-signup {
   transform: translate(-50%, -50%);
   transition: 1s 0.7s ease-in-out;
@@ -32,8 +33,6 @@ form.sign-up-form {
 form.sign-in-form {
   z-index: 2;
 }
-
-/* from here */
 
 .input-field {
   max-width: 380px;
@@ -200,8 +199,9 @@ form.sign-in-form {
   transform: translateX(800px);
 }
 
-/* ANIMATION */
+/*------------------------------------------------------------------------------------------------*/
 
+/* ANIMATION */
 .container.sign-up-mode:before {
   transform: translate(100%, -50%);
   right: 52%;
@@ -368,7 +368,9 @@ form.sign-in-form {
   }
 }
 
-/* styles for the sidebar transition */
+/*------------------------------------------------------------------------------------------------*/
+
+/*  STYLES FOR THE SIDEBAR TRANSITION */
 @keyframes slide-out {
   from {
     transform: translateX(0);
@@ -404,6 +406,9 @@ form.sign-in-form {
   margin-left: 69rem;
 }
 
+/*------------------------------------------------------------------------------------------------*/
+
+/* SPINNING EFFECT ON LOAD  */
 @keyframes spinner {
   to {
     transform: rotate(360deg);
@@ -426,6 +431,9 @@ form.sign-in-form {
   animation: spinner 0.6s linear infinite;
 }
 
+/*------------------------------------------------------------------------------------------------*/
+
+/* TOOLTIP STYLING  */
 .ol-popup {
   position: absolute;
   background-color: #3590f0;
@@ -439,6 +447,7 @@ form.sign-in-form {
   height: 60px;
   color: white;
 }
+
 .ol-popup:after,
 .ol-popup:before {
   top: 100%;
@@ -449,32 +458,39 @@ form.sign-in-form {
   position: absolute;
   pointer-events: none;
 }
+
 .ol-popup:after {
   border-top-color: #3590f0;
   border-width: 10px;
   left: 48px;
   margin-left: -10px;
 }
+
 .ol-popup:before {
   border-top-color: #3590f0;
   border-width: 11px;
   left: 48px;
   margin-left: -11px;
 }
+
 .ol-popup-closer {
   text-decoration: none;
   position: absolute;
   top: 2px;
   right: 8px;
 }
+
 .ol-popup-closer:after {
   content: "✖";
 }
+
+/*------------------------------------------------------------------------------------------------*/
 
 /* CHECKBOX STYLES */
 .checkbox-wrapper-12 {
   position: relative;
 }
+
 .checkbox-wrapper-12 > svg {
   position: absolute;
   top: -130%;
@@ -482,9 +498,11 @@ form.sign-in-form {
   width: 110px;
   pointer-events: none;
 }
+
 .checkbox-wrapper-12 * {
   box-sizing: border-box;
 }
+
 .checkbox-wrapper-12 input[type="checkbox"] {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -493,13 +511,16 @@ form.sign-in-form {
   cursor: pointer;
   margin: 0;
 }
+
 .checkbox-wrapper-12 input[type="checkbox"]:focus {
   outline: 0;
 }
+
 .checkbox-wrapper-12 .cbx {
   width: 24px;
   height: 24px;
 }
+
 .checkbox-wrapper-12 .cbx input {
   position: absolute;
   top: 0;
@@ -509,6 +530,7 @@ form.sign-in-form {
   border: 2px solid white;
   border-radius: 50%;
 }
+
 .checkbox-wrapper-12 .cbx label {
   width: 24px;
   height: 24px;
@@ -522,6 +544,7 @@ form.sign-in-form {
   transform: translate3d(0, 0, 0);
   pointer-events: none;
 }
+
 .checkbox-wrapper-12 .cbx svg {
   position: absolute;
   top: 5px;
@@ -529,6 +552,7 @@ form.sign-in-form {
   z-index: 1;
   pointer-events: none;
 }
+
 .checkbox-wrapper-12 .cbx svg path {
   stroke: #fff;
   stroke-width: 3;
@@ -539,12 +563,15 @@ form.sign-in-form {
   transition: stroke-dashoffset 0.3s ease;
   transition-delay: 0.2s;
 }
+
 .checkbox-wrapper-12 .cbx input:checked + label {
   animation: splash-12 0.6s ease forwards;
 }
+
 .checkbox-wrapper-12 .cbx input:checked + label + svg path {
   stroke-dashoffset: 0;
 }
+
 @-moz-keyframes splash-12 {
   40% {
     background: #2eca6f;
@@ -559,6 +586,7 @@ form.sign-in-form {
       -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
   }
 }
+
 @-webkit-keyframes splash-12 {
   40% {
     background: #2eca6f;
@@ -573,6 +601,7 @@ form.sign-in-form {
       -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
   }
 }
+
 @-o-keyframes splash-12 {
   40% {
     background: #2eca6f;
@@ -587,6 +616,7 @@ form.sign-in-form {
       -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
   }
 }
+
 @keyframes splash-12 {
   40% {
     background: #2eca6f;
@@ -602,7 +632,9 @@ form.sign-in-form {
   }
 }
 
-/* Radio button styling */
+/*------------------------------------------------------------------------------------------------*/
+
+/* RADIO BUTTON STYLING */
 input[type="radio"].visually-hidden {
   position: absolute;
   opacity: 0;
@@ -645,6 +677,8 @@ input[type="radio"].visually-hidden {
 input[type="radio"].visually-hidden:checked + .radio-style:before {
   box-shadow: inset 0 0 0 0.25em #2eca6f; /* Adjusted checked box shadow color and size */
 }
+
+/*------------------------------------------------------------------------------------------------*/
 
 /* FULL SCREEN ICON  */
 .custom-fullscreen {
